--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "startdev": "nodemon index.js"
+    "stdev": "nodemon index.js"
   },
   "dependencies": {
     "bcrypt": "^3.0.5",
