--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "ecommerce api system",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "stdev": "nodemon index.js"
+    "test": "nodemon index.js"
   },
   "dependencies": {
     "bcrypt": "^3.0.5",
